clean up and update gitignore so it accounts for restructuring

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,49 @@
 build
-build2
+
+*.ilk
+*.pdb
+
 /neo/*.user
 /neo/*.opensdf
 /neo/*.sdf
-/neo/ipch/doomdll-ac2305e6/*.ipch
+/neo/*.ipch
 /neo/*.suo
-*.ipch
-/base/doomkey
-/base/xpkey
+
 /game
 /d3xp
 /game-d3xp
+
 /neo/sys/win32/rc/*.aps
-/base/maps/*.bak
-/base/pak004.pk4
-/base/pak000.pk4
-/base/pak001.pk4
-/base/pak002.pk4
-/base/pak003.pk4
-/base/DoomConfig.cfg
-/base/config.spec
-/base/warnings.txt
-/base/editor.cfg
-/base/maps/*.cm
-/base/maps/*.proc
+
+/release/base/doomkey
+/release/base/xpkey
+/release/base/maps/*.bak
+/release/base/pak004.pk4
+/release/base/pak000.pk4
+/release/base/pak001.pk4
+/release/base/pak002.pk4
+/release/base/pak003.pk4
+
+/release/base/DoomConfig.cfg
+/release/base/editor.cfg
+/release/base/config.spec
+/release/base/warnings.txt
+/release/base/console.history
+
+/release/base/maps/*.cm
+/release/base/maps/*.proc
+/release/base/maps/*.ocl
+
+/release/base/doom.qe4
+/release/base/savegames/*.save
+/release/base/screenshots
+/release/base/savegames
+/release/base/glsl/*.i
+
+/release/*.exe
+/release/base/*.dll
+
+/release/prototyping/*
+
 *.aas48
-/base/doom.qe4
 *.proc
-/base/savegames/*.save
-/base/screenshots
-/base/savegames
-/base/glsl/*.i
-/game-d3xp
