Removed batch files for older versions of msvc. Also commented out detection of WinSDK - paths should automatically get set up if it's installed, just let it use whatever the most appropriate path is.

--- a/neo/CMakeLists.txt
+++ b/neo/CMakeLists.txt
@@ -976,18 +976,17 @@ IF(MSVC)
   source_group(Tools\\Sound tools/sound/.*)
   source_group(Ui ui/.*)
 
-  SET(WINSDK_LIB_DIR "$ENV{ProgramFiles}/Windows Kits/8.1/Lib/winv6.3/um/x86")
-  IF(NOT IS_DIRECTORY ${WINSDK_LIB_DIR})
-	message("Windows 8.1 SDK not found: ${WINSDK_LIB_DIR}")
-  SET(PROGRAM_FILES_X86 "ProgramFiles(x86)")
-	SET(WINSDK_LIB_DIR "$ENV{${PROGRAM_FILES_X86}}/Windows Kits/8.1/Lib/winv6.3/um/x86")
+  #SET(WINSDK_LIB_DIR "$ENV{ProgramFiles}/Windows Kits/10/Lib/10.0.19041.0/um/x86")
+  #IF(NOT IS_DIRECTORY ${WINSDK_LIB_DIR})
+	#message("Windows 10 SDK not found: ${WINSDK_LIB_DIR}")
+  #SET(PROGRAM_FILES_X86 "ProgramFiles(x86)")
+	#SET(WINSDK_LIB_DIR "$ENV{${PROGRAM_FILES_X86}}/Windows Kits/10/Lib/10.0.19041.0/um/x86")
 
-	IF(NOT IS_DIRECTORY ${WINSDK_LIB_DIR})
-		message("Windows 8.1 SDK not found either: ${WINSDK_LIB_DIR}")
-		message( FATAL_ERROR "Please install Windows 8.1 SDK" )
-	ENDIF()
-  ENDIF()
-
+	#IF(NOT IS_DIRECTORY ${WINSDK_LIB_DIR})
+	#	message("Windows 10 SDK not found either: ${WINSDK_LIB_DIR}")
+	#	message( FATAL_ERROR "Please install Windows 10 SDK" )
+	#ENDIF()
+  #ENDIF()
 
   SET(EXTERNAL_LIBS
     opengl32.lib
@@ -997,9 +996,9 @@ IF(MSVC)
     iphlpapi.lib
     "${CMAKE_CURRENT_SOURCE_DIR}/openal-soft/common.lib"
     "${CMAKE_CURRENT_SOURCE_DIR}/openal-soft/openal32.lib"
-    "${WINSDK_LIB_DIR}/dinput8.lib"
-    "${WINSDK_LIB_DIR}/dsound.lib"
-    "${WINSDK_LIB_DIR}/dxguid.lib")
+    dinput8.lib
+    dsound.lib
+    dxguid.lib)
 ENDIF()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
