--- a/neo/CMakeLists.txt
+++ b/neo/CMakeLists.txt
@@ -1051,7 +1051,11 @@ set(TARGET_NAME "fhDOOM")
 add_definitions(-DGLEW_STATIC -D__DOOM__ -D__DOOM_DLL__)
 add_executable(${TARGET_NAME} ${SOURCES})
 target_link_libraries(${TARGET_NAME} ${LINK_LIBS})
-add_dependencies(${TARGET_NAME} fhGame-x86 fhGame-roe-x86)
+if(CMAKE_SIZEOF_VOID_P EQUAL 8 AND ID_ENFORCE32BIT=OFF)
+  add_dependencies(${TARGET_NAME} fhGame-x64 fhGame-roe-x64)
+else()
+  add_dependencies(${TARGET_NAME} fhGame-x86 fhGame-roe-x86)
+endif()
 
 if(Qt5Widgets_FOUND)
   add_dependencies(${TARGET_NAME} Qt5CopyBinaries)
