Corrected target name when compiling on 64-bit platforms. Added Callbacks.cpp from dhewm3 - we'll likely kill this down the line and eliminate doomscript entirely in future. Batch for building with vs2022 and x86.

--- a/neo/CMakeLists.txt
+++ b/neo/CMakeLists.txt
@@ -1051,11 +1051,9 @@ set(TARGET_NAME "fhDOOM")
 add_definitions(-DGLEW_STATIC -D__DOOM__ -D__DOOM_DLL__)
 add_executable(${TARGET_NAME} ${SOURCES})
 target_link_libraries(${TARGET_NAME} ${LINK_LIBS})
-if(CMAKE_SIZEOF_VOID_P EQUAL 8 AND ID_ENFORCE32BIT=OFF)
-  add_dependencies(${TARGET_NAME} fhGame-x64 fhGame-roe-x64)
-else()
-  add_dependencies(${TARGET_NAME} fhGame-x86 fhGame-roe-x86)
-endif()
+get_property(GAME_TARGET_NAME GLOBAL PROPERTY GLOB_GAME_TARGET_NAME)
+get_property(D3XP_TARGET_NAME GLOBAL PROPERTY GLOB_D3XP_TARGET_NAME)
+add_dependencies(${TARGET_NAME} ${GAME_TARGET_NAME} ${D3XP_TARGET_NAME})
 
 if(Qt5Widgets_FOUND)
   add_dependencies(${TARGET_NAME} Qt5CopyBinaries)
