Compiles and runs with GCC now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,12 +25,16 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/release/base/)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/release/base/)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/release/base/)
 
-if(FX_BUILD_D3)
+if (WIN32 AND "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")
+endif ()
+set(CMAKE_SHARED_LIBRARY_PREFIX "")
+if (FX_BUILD_D3)
     add_subdirectory(neo/game)
     add_subdirectory(neo/d3xp)
-else()
+else ()
     add_subdirectory(neo/game_fracture)
-endif()
+endif ()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/release/)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/release/)
